Fixed spacing on images

--- a/css/modules/article.css
+++ b/css/modules/article.css
@@ -6,12 +6,14 @@
 
 .article__image {
 	width: 100%;
+	margin-bottom: 1rem;
 }
 
 .article__image img {
 	width: 100%;
 	height: auto;
 	display: block;
+	margin-bottom: 1rem;
 }
 
 .article__heading {  
